# atividade-garagem

./: db.sqlite3  pyproject.toml  requirements.txt
core/: models.py
core/migrations/: 0001_initial.py
garagem/: settings.py
